--- a/springframework-core-message-sender/pom.xml
+++ b/springframework-core-message-sender/pom.xml
@@ -31,6 +31,13 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
     </dependency>
+
+<!--    AspectJ 사용을 위한 dependency-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
+      <version>5.3.15</version>
+    </dependency>
   </dependencies>
 
 </project>
