--- a/springframework-core-message-sender/pom.xml
+++ b/springframework-core-message-sender/pom.xml
@@ -31,6 +31,22 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.nhn.dooray.messenger</groupId>
+      <artifactId>dooray-hook-sender</artifactId>
+      <version>1.2.0-RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>4.3.8.RELEASE</version>
+
+    </dependency>
 
 <!--    AspectJ 사용을 위한 dependency-->
     <dependency>
@@ -39,5 +55,17 @@
       <version>5.3.15</version>
     </dependency>
   </dependencies>
+
+  <repositories>
+    <repository>
+      <id>release</id>
+      <url>https://github.com/edu-springboot/edu-springboot-maven-repo/raw/master/releases</url>
+    </repository>
+
+    <repository>
+      <id>snapshot</id>
+      <url>https://github.com/edu-springboot/edu-springboot-maven-repo/raw/master/snapshots</url>
+    </repository>
+  </repositories>
 
 </project>
